Фиксы для фронтенда
