# internal/pkg/entities/entities.go
@@ -49,9 +49,10 @@ type Workspace struct {
 type Board struct {
 	ID           uint64               `json:"board_id"`
 	Name         string               `json:"name"`
-	Owner        dto.UserInfo         `json:"owner"`
+	Owner        dto.UserID           `json:"owner"`
 	Description  *string              `json:"description"`
 	ThumbnailURL *string              `json:"thumbnail_url"`
+	DateCreated  time.Time            `json:"date_created"`
 	Users        []dto.UserPublicInfo `json:"users"`
 	Lists        []List               `json:"lists"`
 }
